--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,5 +1,8 @@
 ---
 const pageTitle = "Mi blog de Astro aprendizaje";
+import '../styles/global.css';
+import Navigation from '../pages/components/Navigation.astro';
+import Footer from '../pages/components/Footer.astro';
 ---
 
 <html lang="es">
@@ -11,9 +14,7 @@ const pageTitle = "Mi blog de Astro aprendizaje";
 		<title>{pageTitle}</title>
 	</head>
 	<body>
-        <a href="/">Inicio</a>
-        <a href="/about/">Sobre mi</a>
-        <a href="/blog/">Blog</a>
+        <Navigation />
 
         <h1>{pageTitle}</h1>
         <p>Aquí es donde publicaré sobre mi viaje de aprendizaje Astro.</p>
@@ -22,5 +23,6 @@ const pageTitle = "Mi blog de Astro aprendizaje";
             <li><a href="/posts/post-1">Publicación 1</a></li>
             <li><a href="/posts/post-2">Publicación 2</a></li>
         </ul>
+        <Footer />
 	</body>
 </html>
